Fix inert event expand/collapse  on refreshed job results

--- a/awx/ui/client/features/output/_index.less
+++ b/awx/ui/client/features/output/_index.less
@@ -79,6 +79,10 @@
         &:hover div {
             background-color: white;
         }
+
+        &--hidden {
+            display: none;
+        }
     }
 
     &-row--clickable {
